--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>grauzuduu</title>
 </head>
 <body>
-    
+    <h1>Nome:</h1> <p>Henrique</p>
+    <h1>Idade:</h1> <p>16</p>
+    <h1>Profissão:</h1> <p>Mecanico de bike</p>
+    <h1>Hobby:</h1> <p>Montar e desmontar bikes</p>
+    <h1>Resumo:</h1> <p>goxtozo</p>
+    <img src="">
 </body>
+<style>
+    h1{
+        color: rgb(255, 0, 0);
+    }
+    p{
+        font-size: 32;
+        color: rgb(255, 115, 0));
+    }
+</style>
 </html>
